WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52090
[Soup] ResourceHandleSoup does not ever call didSendData for file uploads
https://bugs.webkit.org/show_bug.cgi?id=52090
Summary
[Soup] ResourceHandleSoup does not ever call didSendData for file uploads
Martin Robinson
Reported
2011-01-07 17:02:26 PST
This will break http/tests/local/formdata/upload-events.html when beginDragWithFiles lands.
Attachments
Patch
(10.61 KB, patch)
2011-01-10 01:45 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-01-10 01:45:24 PST
Created
attachment 78380
[details]
Patch
Gustavo Noronha (kov)
Comment 2
2011-02-10 11:11:01 PST
Comment on
attachment 78380
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=78380&action=review
Looks great!
> WebCore/platform/network/soup/ResourceHandleSoup.cpp:261 > + ASSERT(buffer);
I'd move this ASSERT up to be the first thing that is done.
Martin Robinson
Comment 3
2011-02-10 12:27:13 PST
Committed
r78257
: <
http://trac.webkit.org/changeset/78257
>
Martin Robinson
Comment 4
2011-02-10 12:33:45 PST
Comment on
attachment 78380
[details]
Patch Thanks for the review. Landed after moving the ASSERT up and unskipping a few other tests in the skipped list.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug