2011-02-10  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Gustavo Noronha Silva.

        [Soup] ResourceHandleSoup does not ever call didSendData for file uploads
        https://bugs.webkit.org/show_bug.cgi?id=52090

        * platform/gtk/Skipped: Unskip tests which should now be passing.
2011-02-10  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.

        [Soup] ResourceHandleSoup does not ever call didSendData for file uploads
        https://bugs.webkit.org/show_bug.cgi?id=52090

        Call didSendData as body data is uploaded to the server. This is necessary
        for XHR upload events to function properly.

        * platform/network/ResourceHandleInternal.h:
        (WebCore::ResourceHandleInternal::ResourceHandleInternal): Add two new members.
        One to track the total amount of body data and one to track the total amount of
        body data sent so far.
        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::wroteBodyDataCallback): Added.
        (WebCore::addFormElementsToSoupMessage): Split this out into a helper function.
        Will now now sum the total amount of body data.
        (WebCore::startHttp): Attach a wrote-body-data signal handler.

Canonical link: https://commits.webkit.org/68269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78257 268f45cc-cd09-0410-ab3c-d52691b4dbfc